# esp32-ble-hid-typer

./: .gitignore  CLAUDE.md  FEATURES.md  LICENSE  PLAN.md  README.md  TODO.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: prepare-pages-firmware.mjs
.github/workflows/: build-firmware.yml  deploy-webapp.yml
docs/: OTA_SIGNING.md
firmware/: CMakeLists.txt  ota_signing_pubkey.pem  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
firmware/main/: CMakeLists.txt  audit_log.c  audit_log.h  auth.c  auth.h  ble_security.c  ble_security.h  ble_server.c  ble_server.h  button_reset.c  button_reset.h  idf_component.yml  keymap_us.h  main.c  neopixel.c  neopixel.h  nvs_storage.c  nvs_storage.h  provisioning.c  provisioning.h  serial_cmd.c  serial_cmd.h  typing_engine.c  typing_engine.h  usb_hid.c  usb_hid.h
webapp/: index.html  package-lock.json  package.json  pwa-test.mjs  tsconfig.json  vite.config.ts
webapp/src/: app.tsx
webapp/src/components/: AuditLog.tsx  BleConnect.tsx  ClipboardPaste.tsx  ConnectionScreen.tsx  FirmwareFlash.tsx  PinSetup.tsx  ProvisioningScreen.tsx  Settings.tsx  StatusBar.tsx  TextSender.tsx  VirtualKeyboard.css  VirtualKeyboard.tsx
webapp/src/types/: protocol.ts
webapp/src/utils/: auth.ts  ble.ts  storage.ts
